# fix footer   backface-visibility: hidden;

--- a/hotel-project/css/style.css
+++ b/hotel-project/css/style.css
@@ -641,6 +641,8 @@ body {
 
 .footer-image {
     width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
     transition: all .5s;
 }
 
